--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -4,10 +4,11 @@
             <ul class="features-list">
                 <li class="features-list_item">
                   <!-- <div class="border-icon"> -->
-                    <svg class="features-list_icon">
+                    <a href="#" class="icon-mean"></a>
+                    <!-- <svg class="features-list_icon ">
                         <use href="./icons/features-sprite.svg#1mean" >
                         </use>
-                    </svg>
+                    </svg> -->
                     <!-- </div> -->
                     <h3 class="features-list_title">
                         Адаптированная авторская
@@ -16,10 +17,11 @@
                 </li>
                 <li class="features-list_item">
                     <!-- <div class="border-icon"></div> -->
-                    <svg class="features-list_icon">
+                    <a href="#" class="icon-mob"></a>
+                    <!-- <svg class="features-list_icon">
                         <use href="./icons/features-sprite.svg#1mob">
                         </use>
-                    </svg>
+                    </svg> -->
                     <!-- </div> -->
                     <h3 class="features-list_title">
                         Современные
@@ -28,10 +30,11 @@
                 </li>
                 <li class="features-list_item">
                     <!-- <div class="border-icon"> -->
-                    <svg class="features-list_icon">
+                        <a href="#" class="icon-dol"></a>
+                    <!-- <svg class="features-list_icon">
                         <use href="./icons/features-sprite.svg#1dol">
                         </use>
-                    </svg>
+                    </svg> -->
                 <!-- </div> -->
                     <h3 class="features-list_title">
                         Финансовая гарантия
