--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -23,11 +23,12 @@
 //   height: 60px;
 //   margin-right: 17px;
 // }
-.features-list_icon {
-  width: 58.8px;
-  height: 60px;
-  margin-right: 10px;
-}
+
+// .features-list_icon {
+//   width: 58.8px;
+//   height: 60px;
+//   margin-right: 10px;
+// }
 .features-list_title {
   @include font(700, 14px, 1.428, left, 0.08em);
   color: $black;
@@ -35,6 +36,28 @@
   height: 60px;
   letter-spacing: 0.08em;
 }
+.icon-mean {
+  background-image: url('../icons/feature-icons/1mean.svg');
+  background-repeat: no-repeat;
+  width: 65px;
+  height: 62px;
+  margin-right: 10px;
+}
+.icon-mob {
+  background-image: url('../icons/feature-icons/1mob.svg');
+  background-repeat: no-repeat;
+  width: 62px;
+  height: 62px;
+  margin-right: 10px;
+}
+.icon-dol {
+  background-image: url('../icons/feature-icons/1dol.svg');
+  background-repeat: no-repeat;
+  width: 62px;
+  height: 62px;
+  margin-right: 10px;
+}
+
 @media screen and (min-width: 768px) {
   .features-list {
     display: flex;
@@ -85,5 +108,26 @@
   }
   .features-list_item {
     margin-right: 0px;
+  }
+  .icon-mean {
+    background-image: url('../icons/feature-icons/2mean.svg');
+    background-repeat: no-repeat;
+    width: 102px;
+    height: 104px;
+    margin-right: -19px;
+  }
+  .icon-mob {
+    background-image: url('../icons/feature-icons/2mob.svg');
+    background-repeat: no-repeat;
+    width: 102px;
+    height: 104px;
+    margin-right: -19px;
+  }
+  .icon-dol {
+    background-image: url('../icons/feature-icons/2dol.svg');
+    background-repeat: no-repeat;
+    width: 102px;
+    height: 104px;
+    margin-right: -19px;
   }
 }
