--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<article class="hero">
+<article id="hero" class="hero">
     <div class="container">
         <div class="hero__card">
             <h1 class="hero__title">Комплексная подготовка к ВНО<br>
