--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -4,14 +4,24 @@
 
 .footer-list-button {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin-bottom: 113px;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 165px;
+  }
 }
 
 .footer-button-item:not(:last-child) {
-  @media screen and (max-width: 767px) {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    margin-right: 15px;
   }
 }
 
@@ -28,17 +38,37 @@
   color: $color-text-white;
   border: none;
   cursor: pointer;
+
+  @media screen and (min-width: 768px) {
+    width: 191px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 198px;
+  }
 }
 
 .second-button {
   background-color: $color-text-white;
   color: $color-accent;
+
+  @media screen and (min-width: 768px) {
+    width: 174px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 180px;
+  }
 }
 
 .footer-icon-vector {
   width: 5px;
   height: 8px;
   margin-left: 8px;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 13px;
+  }
 }
 
 .footer-title {
