--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,27 @@
 <footer class="footer">
   <div class="footer-container">
-    <div>
+    <div class="fotter-first-container">
       <h2 class="footer-title">homemade ice cream made</h2>
       <p class="footer-passion">with passion</p>
     </div>
-    <div class="footer-social">
+    <div class="footer-social-container">
       <ul class="footer-list">
         <li class="footer-list-item">
-          <a href="">
+          <a href="https://www.github.com">
             <svg class="footer-icon">
               <use href="./images/footer/symbol-defs.svg#icon-github"></use>
             </svg>
           </a>
         </li>
         <li class="footer-list-item">
-          <a href="">
+          <a href="https://www.telegram.com">
             <svg class="footer-icon">
               <use href="./images/footer/symbol-defs.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-list-item">
-          <a href="">
+          <a href="https://www.facebook.com">
             <svg class="footer-icon">
               <use href="./images/footer/symbol-defs.svg#icon-facebook"></use>
             </svg>
@@ -29,12 +29,13 @@
         </li>
       </ul>
     </div>
-
-    <p class="devis">
-      Feel free to contact
-      <span class="footer-contact">+61 (0) 383 766 284</span>
-    </p>
-    <div class="f-logo">
+    <div class="footer-contact-container">
+      <p class="footer-pointer">
+        Feel free to contact
+        <span class="footer-contact">+61 (0) 383 766 284</span>
+      </p>
+    </div>
+    <div class="footer-logo-container">
       <p class="footer-logo">&copy; 2019 - IceCream. All Rights Reserved.</p>
     </div>
   </div>
