--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -5,14 +5,31 @@
 }
 .footer-container {
     @include container();
-     
-    background-color: #fff5f6;
     
-    height: 100px;
+    background-color: #fff5f6;
+  
+    justify-content: space-around;
+    align-items: center;
+    
+}
+.fotter-first-container {
+   @media screen and (min-width: 768px) {
+      
+       justify-content: space-around;
+       align-items: center;
+         }
+   @media screen and (min-width: 1280px) {
+
+     
+      justify-content: space-around;
+      align-items: center;
+       
+   }
 }
 .footer-title {
-   width: 232px;
-
+   
+    width: 232px;
+   
     color: #ffa5ba ;
 
     font-family: titan one;
@@ -21,9 +38,17 @@
     font-size: 18px;
     line-height: 1.18;
     text-transform: uppercase;
-
     margin-top: 40px;
-    
+
+   @media screen  and (min-width: 768px){
+      width: 340px;
+      font-size: 26px;
+      letter-spacing: 0,04rem;
+   } 
+   @media screen and (min-width: 1280px) {
+       width: 472px;
+       font-size: 30px;  
+   }
 }
 
 .footer-passion {
@@ -36,9 +61,18 @@
     line-height: 1.2;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-
-    
+   
     margin-top: 15px;
+    @media screen and (min-width: 768px) {
+        
+        font-size: 48px;
+        letter-spacing: 0,06rem;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 474px;
+        font-size: 58px;
+    }
 }
 .footer-list{
    
@@ -48,60 +82,145 @@
 }
 .footer-list li{
    margin-bottom: 23px;
-   
-}
 
-.footer-social{
+   @media screen and (min-width: 1280px) {
+      &:hover,
+      &:focus{
+          background-color: #d41443;
+          fill: #fff5f6; }
+
+      } 
+      
+    }
+     
+.footer-social-container {
    justify-content: center;
    padding-left: 145px;
    background-color: #fff5f6;
+
+   @media screen and (min-width: 768px) {
+
+       display: flex;
+       justify-content: space-around;
+       align-items: center;
+       
+   }
+
+   @media screen and (min-width: 1280px) {
+      
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+     
+   }
 }
 
 .footer-icon{
-   
+
     align-items: center;
     width: 32px;
     height: 32px;
     border-radius: 50%;
-     margin-right: 20px;
-}
+     margin-right: 25px;
 
-.devis{
+      @media screen and (min-width: 768px) {
+          width: 20px;
+          height: 20px;
+
+      }
+      @media screen and (min-width: 1280px) {
+
+          width: 34px;
+          height: 34px;
+      }
+}
+.footer-contact-container {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+    }
+    @media screen and (min-width: 1280px) {
+
+       display: flex;
+       justify-content: space-around;
+       align-items: center;
+    }
+}
+.footer-pointer {
     
-   width: 230px;
+    width: 230px;
+
     font-family: Dm sans;
     font-size: 12px;
     font-weight: bold;
     text-align: right;
     align-items: center;
     padding-left: 40px;
+
+    @media screen and (min-width: 768px) {
+        
+        
+        width: 268px;
+        font-size: 14px;
+        
+    }
+    @media screen and (min-width: 1280px) {
+       
+        width: 319px;
+        font-size: 16px;
+        letter-spacing: 0,02em;
+    }
    
 }
 .footer-contact{
-
-   
+  
     font-family: Dm sans;
     font-size: 12px;
     font-weight: bold;
      align-items: center;
     color: #d41443;
+
+     @media screen and (min-width: 768px) {
+         width: 268px;
+         font-size: 14px;
+
+     }
+     @media screen and (min-width: 1280px) {
+
+         width: 319px;
+         font-size: 16px;
+         letter-spacing: 0,02em;
+     }
     
 }
-.f-logo{
- display: flex; 
+.footer-logo-containe {
+    width: 320px;
+ 
  align-items: center;  
+ 
+ text-align: center;
  margin-top: 65px;
- padding-left: 75px;
- background-color: #fff5f6;
+ padding-left: 55px;
+  background-color: #fff5f6;
+ 
  }
 .footer-logo{
-
-  width: 150px;
-color:  #907E82;
+position: absolute;
+width: 149px;
 font-family: Dm sans;
 font-weight: bold;
 font-size: 14px;
-
 text-align: center;
+color: #907E82;
+background-color: #fff5f6;
 
-}
+ @media screen and (min-width: 768px) {
+     width: 276px;
+     font-size: 14px;
+     letter-spacing: 0,02em;
+     align-items: center;
+ }
+
+ }
