Add html and styles

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './layout/methods';
 @import './layout/hero';
 @import './layout/description';
+@import './layout/programs';
 // ==============BASE==============
 @import './base/common';
 @import './base/container';
