--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -1,4 +1,4 @@
-<section class="advantages section">
+<section id="advantage" class="advantages section">
   <div class="container">
     <h2 class="advantages__title">Как мы это делаем!</h2>
     <ul class="advantages-list">
