--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,4 +1,4 @@
-<div class="features section">
+<div id="features" class="features section">
     <div class="container">
         <h2 class="features_title">
             <ul class="features-list">
