--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -16,19 +16,19 @@
                     <a href="" class="header__logo--white"></a>
                     <ul class="site-nav list">
                         <li class="item">
-                            <a href="#our-programm" class="link">Программы обучения</a>
+                            <a href="./index.html#our-programm" class="link">Программы обучения</a>
                         </li>
                         <li class="item">
-                            <a href="#hero" class="link current">О нас</a>
+                            <a href="./index.html#features" class="link">О нас</a>
                         </li>
                         <li class="item">
-                            <a href="#advantage" class="link">Варианты обучения</a>
+                            <a href="./index.html#advantage" class="link">Варианты обучения</a>
                         </li>
                         <li class="item">
-                            <a href="#registration-form" class="link">Контакты</a>
+                            <a href="./index.html#registration-form" class="link">Контакты</a>
                         </li>
                     </ul>
-                    <button type="button" class="button button--header">Консультация по телефону</button>
+                    <button type="button" class="button--header">Консультация по телефону</button>
                     </div>
                 </div>
             </nav>
