--- a/src/partials/registration-form.html
+++ b/src/partials/registration-form.html
@@ -1,4 +1,4 @@
-<section id="registration-form" class="registration">
+<section class="registration">
     <form action="#" class="registration__form">
         <h3 class="registration__form--title">Регистрация на <span class="registration__orange">бесплатную</span>
             телефонную <span class="registration__orange">консультацию</span> по нюансам ЗНО
