--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="footer-wrapper">
     <div class="footer-text-wrapper">
       <h2 class="footer-title">
@@ -68,4 +68,4 @@
   <div class="copyright-wrapper">
     <p class="copyright container">&#x00040; Все права защищены, 2019</p>
   </div>
-</footer>
+</footer> -->
