--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero container">
+<!-- <section class="hero container">
   <div class="hero-text-box">
     <h1 class="hero-title">
       Комплексная подготовка к ВНО по английскому языку
@@ -28,4 +28,4 @@
 
     <img src="/images/hero/bg-desktop.png" alt="" />
   </picture>
-</section>
+</section> -->
