--- a/src/partials/methods.html
+++ b/src/partials/methods.html
@@ -1,4 +1,4 @@
-<section class="methods">
+<!-- <section class="methods">
   <div class="container">
     <h1 class="methods-title">Как мы это делаем</h1>
 
@@ -100,4 +100,4 @@
       </li>
     </ul>
   </div>
-</section>
+</section> -->
