--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,4 +1,4 @@
-<section class="problems">
+<!-- <section class="problems">
         <div class="container">
                 <h1 class="hidden-title">
                     problems
@@ -51,4 +51,4 @@
         
         </div>
     </div>
-</section>
+</section> -->
