--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -97,7 +97,7 @@ position: relative;
     .problems{
         height: 560px;
         padding-top:100px;
-        background-image: url(./src/images/problems/fire.png);
+        background-image: url(../images/problems/fire.png);
     }
     .section-problems{
         width: 1314px;
