--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,54 +1,34 @@
 <header>
-    <div class="container header" id="header">
-        <a href="" class="logo">
+  <div class="header-position container">
+        <div class="container header" id="header">
+          <a href="" class="logo">
             <svg class="logo-img">
-                <use href="./images/header/sprite-hero.svg#icon-logo"></use>
+              <use href="./images/header/sprite-hero.svg#icon-logo"></use>
             </svg>
             ICECREAM
-        </a>
-        <div class="menu-container" id="menu-container" data-menu>
-            <button class="buy-now btn" type="button">Buy now
-              <svg class="buy-now-img">
+          </a>
+          <div class="menu">
+            <a href="#" class="menu__button">
+              <span class="menu__lines"></span>
+            </a>
+            <nav class="menu__nav">
+              <button class="buy-now btn" type="button">Buy now
+                <svg class="buy-now-img">
                   <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
                 </svg>
-            </button>
-            <nav class="menu-nav">
-                <ul class="menu">
-                    <li class="menu-item">
-                        <a href="#header" class="menu-item-link">Home</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#reviews" class="menu-item-link">About us</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#traditions" class="menu-item-link">How it’s made?</a>
-                        </li>
-                    <li class="menu-item">
-                        <a href="#products" class="menu-item-link">Our products</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#contact" class="menu-item-link">Contact</a>
-
-                    </li>
-                </ul>
+              </button>
+              <a href="#header" class="menu__link">Home</a>
+              <a href="#reviews" class="menu__link">About us</a>
+              <a href="#traditions" class="menu__link">How it’s made?</a>
+              <a href="#products" class="menu__link">Our products</a>
+              <a href="#contact" class="menu__link">Contact</a>
             </nav>
-            <div class="menu-container-overlay"></div>
+            <div class="menu__overlay"></div>
           </div>
-        <button class="buy-now tablet btn" type="button" data-modal-open>Buy now
+        
+          <button class="buy-now tablet btn" type="button" data-modal-open>Buy now
             <svg class="buy-now-img">
-                <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
-              </svg>
-          </button>
-        <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
-            <svg width="24px" height="24px" aria-label="Мобильное меню">
-              <use
-                class="menu-button-icon open"
-                href="./images/header/sprite-hero.svg#icon-Burger"
-              ></use>
-              <use
-                class="menu-button-icon close"
-                href="./images/header/sprite-hero.svg#icon-close"
-              ></use>
+              <use href="./images/header/sprite-hero.svg#icon-Vector1"></use>
             </svg>
           </button>
           <a id="top__button" class="scrollUp-btn">
@@ -58,80 +38,82 @@
           </a>
           <!-- Модальное окно заказа -->
           <!-- <div class="backdrop is-hidden" data-modal>
-              <div class="modal">
-                <button
-                  class="close-button"
-                  aria-label="Закрыть окно заказа услуг"
-                  data-modal-close
-                >
-                  <svg class="close-button-img">
-                    <use href="./images/header/sprite-hero.svg#icon-close"></use>
-                  </svg>
-                </button>
-                <form action="#">
-                  <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-                  <ul class="contacts-input">
-                    <li class="contacts-input-item">
-                      <label class="input-title">
-                        Имя
-                        <input type="text" value="" name="name" required />
-                        <svg class="contacts-input-img">
-                          <use
-                            href="./images/header/sprite-hero.svg#icon-input-contact1"
-                          ></use>
-                        </svg>
-                      </label>
-                    </li>
-                    <li class="contacts-input-item">
-                      <label class="input-title">
-                        Телефон
-                        <input type="tel" value="" name="tel" required />
-                        <svg class="contacts-input-img">
-                          <use
-                            href="./images/header/sprite-hero.svg#icon-input-contact2"
-                          ></use>
-                        </svg>
-                      </label>
-                    </li>
-                    <li class="contacts-input-item">
-                      <label class="input-title">
-                        Почта
-                        <input type="email" value="" name="email" required />
-                        <svg class="contacts-input-img">
-                          <use
-                            href="./images/header/sprite-hero.svg#icon-input-contact3"
-                          ></use>
-                        </svg>
-                      </label>
-                    </li>
-                    <li class="contacts-input-item">
-                      <label class="input-title"
-                        >Комментарий
-                        <textarea
-                          class="comment"
-                          name="comment"
-                          placeholder="Введите текст"
-                        ></textarea>
-                      </label>
-                    </li>
-                  </ul>
-                  <input
-                    class="checkbox"
-                    type="checkbox"
-                    name="subscription policy"
-                    value=""
-                    id="policy"
-                  />
-                  <label class="subscription policy" for="policy">
-                    <span class="checkicon"></span>
-                    Соглашаюсь с рассылкой и принимаю
-                    <a class="contract-terms" href="">Условия договора</a>
-                  </label>
-                  <button class="subscribtion-button" type="submit">
-                    Отправить
-                  </button>
-                </form>
-              </div>
-          </div> -->
-    </div>
+                      <div class="modal">
+                        <button
+                          class="close-button"
+                          aria-label="Закрыть окно заказа услуг"
+                          data-modal-close
+                        >
+                          <svg class="close-button-img">
+                            <use href="./images/header/sprite-hero.svg#icon-close"></use>
+                          </svg>
+                        </button>
+                        <form action="#">
+                          <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+                          <ul class="contacts-input">
+                            <li class="contacts-input-item">
+                              <label class="input-title">
+                                Имя
+                                <input type="text" value="" name="name" required />
+                                <svg class="contacts-input-img">
+                                  <use
+                                    href="./images/header/sprite-hero.svg#icon-input-contact1"
+                                  ></use>
+                                </svg>
+                              </label>
+                            </li>
+                            <li class="contacts-input-item">
+                              <label class="input-title">
+                                Телефон
+                                <input type="tel" value="" name="tel" required />
+                                <svg class="contacts-input-img">
+                                  <use
+                                    href="./images/header/sprite-hero.svg#icon-input-contact2"
+                                  ></use>
+                                </svg>
+                              </label>
+                            </li>
+                            <li class="contacts-input-item">
+                              <label class="input-title">
+                                Почта
+                                <input type="email" value="" name="email" required />
+                                <svg class="contacts-input-img">
+                                  <use
+                                    href="./images/header/sprite-hero.svg#icon-input-contact3"
+                                  ></use>
+                                </svg>
+                              </label>
+                            </li>
+                            <li class="contacts-input-item">
+                              <label class="input-title"
+                                >Комментарий
+                                <textarea
+                                  class="comment"
+                                  name="comment"
+                                  placeholder="Введите текст"
+                                ></textarea>
+                              </label>
+                            </li>
+                          </ul>
+                          <input
+                            class="checkbox"
+                            type="checkbox"
+                            name="subscription policy"
+                            value=""
+                            id="policy"
+                          />
+                          <label class="subscription policy" for="policy">
+                            <span class="checkicon"></span>
+                            Соглашаюсь с рассылкой и принимаю
+                            <a class="contract-terms" href="">Условия договора</a>
+                          </label>
+                          <button class="subscribtion-button" type="submit">
+                            Отправить
+                          </button>
+                        </form>
+                      </div>
+                  </div> -->
+        </div>
+
+  </div>
 </header>
