--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -10,13 +10,15 @@
   margin-right: auto;
   border: 2px solid $orange;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transform: scale(1);
   transition: color 250ms $time-function, background-color 250ms $time-function,
-    box-shadow 250ms $time-function;
+    box-shadow 250ms $time-function, transform 250ms $time-function;
   &:hover,
   &:focus {
     cursor: pointer;
-    background-color: $white;
+    background-color: transparent;
     color: $orange;
+    transform: scale(1.2);
     box-shadow: 0px 3px 1px rgb(0 0 0 / 10%), 0px 1px 2px rgb(0 0 0 / 8%),
       0px 2px 2px rgb(0 0 0 / 12%);
   }
