Добавляет хиро и хедер

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,13 @@
 <header class="page-header">
   <div class="container">
     <nav class="header-nav">
-      <a href="#" class="logo">
-        Hell
-        <span class="test">
-          <svg class="logo-img">
-            <use href="./images/sprite.svg#icon-fire"></use>
-          </svg>
-        </span>
-
-        EN<br />
-        <!-- <span class="logo-description">адский английский</span> -->
+      <a href="#" class="logo-header">
+      <img class="logo" src="./images/logo-black-mobile.svg" />
       </a>
       <div class="header-menu-container" id="menu-container" data-menu>
+        <a href="#" class="logo-menu">
+        <img class="logo" src="./images/logo-white-mobile.svg" />
+        </a>
         <ul class="header-nav-list">
           <li class="header-nav-list-item">
             <a href="#" class="header-nav-link">Программа обучения</a>
