--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,11 +13,14 @@
 
         <button type="submit" class="btn">хочу на бесплатное занятие</button>
       </div>
-      <img
-        src="\images\hero-desk.jpg"
-        alt="Комплексная подготовка к ВНО по английскому языку"
-        class="hero-img"
-      />
+      <picture class="hero-img-wrapper">
+        <source srcset="./images/hero-desk.png 1x, ./images/hero-desk@2x.png 2x" media="(min-width: 1200px)"
+          type="image/png">
+        <source srcset="./images/hero-tablet.png 1x, ./images/hero-tablet@2x.png 2x" media="(min-width: 768px)"
+          type="image/png">
+        <source srcset="./images/hero-mobile.jpg 1x, ./images/hero-mobile@2x.jpg 2x" media="(min-width: 320px)">
+        <img class="hero-img" src="./images/hero-mobile.jpg" alt="Комплексная подготовка к ВНО по английскому языку" />
+      </picture>
     </div>
   </div>
 </section>
