Частично секция Review

--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -7,4 +7,23 @@
 
 <section class="review-section container">
   <div class="section-separate"></div>
+
+  <div class="review-slider">
+    <img
+      class="review-slider-foto"
+      srcset="./images/review/testimonials1-desktop@2x.png 2x"
+      src="./images/review/testimonials1-desktop.png"
+      alt="Customer"
+      width="85"
+      height="85"
+    />
+
+    <div class="review-slider-bg">
+      <p class="review-slider-comment">
+        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
+        in nibh vel risus.zzz1
+      </p>
+    </div>
+  </div>
 </section>
