сделал разметку таблет и мобылки

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,37 @@
 <header class="header">
     <!-- Игорь -->
     <div class="header-container">
-        <h1>Игорь</h1>
-        <img src="./images/demo.jpg" alt="pes" width="250">
+        <img src="./images/hero/logo.png" alt="логотип" class="header-logo">
+        <div class="header-buttons">
+        <button type="button" class="header-burger"
+                data-menu-button>
+                <svg width="20px" height="12px"
+                    aria-label="меню">
+                    <use href="./images/hero/sprite.svg#icon-burger" class="header-menu"></use>
+                    <use href="./images/hero/sprite.svg#icon-close" class="header-close"></use>
+                </svg></button>
+                <div class="header-menu-container" data-menu>
+                    <div class="header-navigations">
+                    <nav>
+                        <button type="button" class="header-but">Buy now <svg width="8px" height="12px" class="header-buy">
+                        <use href="./images/hero/sprite.svg#icon-vector"></use>
+                        </svg></button>
+                    <ul class="header-ul">
+                        <li class="header-li">Home</li>
+                        <li class="header-li">About us</li>
+                        <li class="header-li">How it’s made?</li>
+                        <li class="header-li">Our products</li>
+                        <li class="header-li">Contact</li>
+                       
+                    </ul>
+                    
+                </nav>
+                    </div>
+                </div>
+    <button type="button" class="header-button">Buy now <svg width="8px" height="12px">
+        <use href="./images/hero/sprite.svg#icon-vector"></use>
+    </svg></button>
+    </div>
     </div>
 </header>
+<script src="./modal.js"></script>
