--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,8 +1,224 @@
 @import './styleDefoult/mixin';
-.hero{
-    background-color: yellow;
-}
+.hero{ 
+    background-color: #FFB8CA;
+    &-list{
+        position: relative;
+        z-index: 1;
+        list-style: none;
+        display: flex;
+        padding: unset;
+        margin: unset;
+        @media screen and (min-width: 768px) { 
+        margin-bottom: 66px;
+              }
+        }
+        &-images{
+            list-style: none;
+            margin: unset;
+            }
+        &-ellipse{
+        display: block;
+        position: absolute;
+        top: 83px;
+        right: 0;
+        @media screen and (min-width: 768px) { 
+        top: 31px;
+        right: 137px;
+                  }
+        @media screen and (min-width: 1200px) { 
+        top: 52px;
+        right: 267px;
+         }
+        }
+        &-horn{
+        display: block;
+        position: absolute;
+        top: 92px;
+        right: 32px;
+        @media screen and (min-width: 768px) { 
+        top: 63px;
+        right: 247px;
+                      }
+        }
+        &-jug{
+        display: none;
+        @media screen and (min-width: 768px) { 
+        display: block;
+        position: absolute;
+       top: 245px;
+        left: 34px;
+                      }
+        @media screen and (min-width: 1200px) { 
+        top: 390px;
+        left: 77px;                
+            }
+        }
+        &-women{
+        display: none;
+        @media screen and (min-width: 768px) { 
+            display: block;
+            position: absolute;
+           top: 267px;
+            right: 34px;
+                          }
+        }
+    &-products, &-made{
+          padding: unset;
+          border: unset;
+          font-family: DM Sans;
+          font-weight: 400;
+          font-size: 8px;
+          line-height: 1.25;
+          padding: 8px 15px;
+          border-radius: 20px;
+          @media screen and (min-width: 1200px) { 
+        font-size: 18px;
+        line-height: 1.28;
+        padding: 9px 17px; 
+                  }
+    }
+    &-milk{
+    display: none;
+    margin-left: 120px;
+    @media screen and (min-width: 768px) { 
+        display: block;
+              }
+    @media screen and (min-width: 1200px) { 
+        margin-left: 181px ;          
+                              }
+        
+    }
+    &-button{
+    border: unset;
+    background-color: white;
+    border-radius: 20px;
+    fill:#D41443;
+    @media screen and (min-width: 1200px) { 
+    height: 26px;
+    width: 26px;
+                  }
+    }
+    &-text{
+        width: 115px;
+        font-family: DM Sans;
+        font-weight: 400;
+        font-size: 8px;
+        line-height: 1.5;
+        color: white;
+        margin: unset;
+        margin-bottom: 10px;
+        @media screen and (min-width: 1200px) { 
+        font-size: 14px;
+        line-height: 1.35;
+        width: 200px;
+        margin-bottom: 20px;
+                  }
+    }
+    &-numbering{
+        display: none;
+        position: absolute;
+        top: 96px;
+        right: 34px;
+        list-style: none;
+        margin: unset;
+        &-item{
+            position: relative;
+            &:not(:last-child){
+                margin-bottom: 5px;
+        }}
+        @media screen and (min-width: 768px) { 
+            display: inline-block;
+                  }
+    }
+    &-ball{
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background-color: #fff;
+        right: 2px;
+        top: -4px;
+    }
+    &-numeric{
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 1.14;
+    color: #D41443;
+    margin: unset;
+    position: relative;
+    z-index: 1;
+    }
+    &-element{
+    font-family: DM Sans;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 1.25;
+    color: white;
+    margin: unset;
+    }
+    &-products{
+    margin-right: 8px;
+    background: #D41443;
+    color: white;
+    @media screen and (min-width: 1200px) { 
+    margin-right: 15px;     
+                  }
+    }
+    &-made{
+     background-color: #fff;
+     color: #D41443;   
+    }
+    &-name{
+    position: relative;
+    z-index: 1;
+    width: 230px;
+    margin: unset;
+    margin-bottom: 19px;
+    font-family: Titan One;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    color: #fff;
+    @media screen and (min-width: 768px) { 
+    font-size: 22px;
+    line-height: 1.13;
+      }
+      @media screen and (min-width: 1200px) { 
+    font-size: 38px;
+    line-height: 1.15;
+    margin-bottom: 25px;
+    width: 280px;
+              }
+    &-span{
+        font-family: Titan One;
+        font-weight: 400;
+        font-size: 48px;
+        line-height: 0.93;
+        letter-spacing: 0.04em; 
+        color: #D41443; 
+        @media screen and (min-width: 768px) {
+        font-size: 34px;
+        line-height: 0.88;
+        } 
+        @media screen and (min-width: 1200px) { 
+        font-size: 58px;
+        line-height: 0.89;
+                  } 
+    }
+    }
 .hero-container {
-    @include container();
-    // background-color: red;
+    @include container(); 
+    padding-top: 110px;
+    padding-bottom: 160px; 
+    @media screen and (min-width: 768px) { 
+    padding-top: unset;
+    padding-bottom: 27px;
+          } 
+    @media screen and (min-width: 1200px) { 
+    padding-bottom: 56px;
+                  }
+        }
 }
+
