--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,26 +1,26 @@
-<footer>
-  <section class="footer">
+<footer class="footer">
+  
     <div>
       <p>homemade ice cream made</p>
-      <h2>with passion</h2>
+      <h3>with passion</h3>
     </div>
-    <div class="footer-container-logo">
+    <div class="footer-socials">
       <ul>
-        <li class="footer-item">
-          <a href="https://github.com/">github</a>
-          <svg class="footer-logo" width="20" height="20">
+        <li class="socials-item">
+          <a href="https://github.com/" class="socials-link">github</a>
+          <svg class="socials-icon" width="20" height="20">
             <!-- <use href="../images/icons/simbol-defs.svg#icon-github"></use> -->
           </svg>
         </li>
-        <li class="footer-item">
-          <a href="https://web.telegram.org/#/login">telegram</a>
-          <svg class="footer-logo" width="20" height="16">
+        <li class="socials-item">
+          <a href="https://web.telegram.org/#/login" class="socials-link">telegram</a>
+          <svg class="socials-icon" width="20" height="16">
             <use></use>
           </svg>
         </li>
-        <li class="footer-item">
-          <a href="https://www.facebook.com/">facebook</a>
-          <svg class="footer-logo" width="9" height="20">
+        <li class="socials-item">
+          <a href="https://www.facebook.com/" class="socials-link">facebook</a>
+          <svg class="socials-icon" width="9" height="20">
             <use></use>
           </svg>
         </li>
@@ -33,5 +33,5 @@
     <div>
       <p>&copy 2019 - IceCream. All Rights Reserved.</p>
     </div>
-  </section>
+ 
 </footer>
