--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -25,7 +25,7 @@
                             <a href="./index.html#advantage" class="link">Варианты обучения</a>
                         </li>
                         <li class="item">
-                            <a href="./index.html#registration-form" class="link">Контакты</a>
+                            <a href="./index.html#call-me" class="link">Контакты</a>
                         </li>
                     </ul>
                     <button type="button" class="button--header">Консультация по телефону</button>
