--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -22,6 +22,8 @@
   border-radius: 50%;
 }
 .reviews-commit {
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
   background: #fafafa;
   max-width: 280px;
