--- a/src/partials/registration-form.html
+++ b/src/partials/registration-form.html
@@ -1,6 +1,6 @@
 <section class="registration">
     <div class="container">
-        <form action="#" class="registration__form">
+        <form action="#" class="registration__form" id="call-me">
             <h3 class="registration__form--title">Регистрация на <span class="registration__orange">бесплатную</span>
             телефонную <span class="registration__orange">консультацию</span> по нюансам ЗНО
             по английскому языку</h3>
