поставил ховеры и якоря в шапке

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -12,7 +12,7 @@
      position: relative;
         }
      @media screen and (min-width: 1200px) {  
-     padding-bottom: 90px;
+     padding-bottom: 89px;
      padding-left: 47px;}
 }
 .header{
@@ -62,6 +62,15 @@
        }
 
       }
+      &:focus, &:hover{
+     color: #D41443;
+     transition-duration: 400ms;
+     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      }
+     }
+     &-a{
+     color: unset;
+     text-decoration: none;
      }
     &-menu-container{
           z-index: 2;
@@ -127,6 +136,11 @@
           margin-left: 21px;
           margin-top: 60px; 
           margin-bottom: 19px;
+          &:focus, &:hover{
+               background: #ECEBEB;
+               transition-duration: 300ms;
+               transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+               }
           @media screen and (min-width: 1200px) {
                display: none;
 
@@ -144,6 +158,11 @@
      padding: 10px 55px 10px 37px;
      border-radius: 22px;
      background-color: #fff;
+     &:focus, &:hover{
+          background: #ECEBEB;
+          transition-duration: 300ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+           }
      & svg{
           position: absolute;
           top: 16px;
