--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -11,6 +11,9 @@
         @media screen and (min-width: 768px) { 
         margin-bottom: 66px;
               }
+        @media screen and (min-width: 1200px) { 
+        margin-bottom: 112px;
+                      }
         }
         &-images{
             list-style: none;
@@ -39,6 +42,10 @@
         top: 63px;
         right: 247px;
                       }
+        @media screen and (min-width: 1200px) { 
+        top: 112px;
+        right: 450px;
+        }
         }
         &-jug{
         display: none;
@@ -49,7 +56,7 @@
         left: 34px;
                       }
         @media screen and (min-width: 1200px) { 
-        top: 390px;
+        top: 435px;
         left: 77px;                
             }
         }
@@ -61,7 +68,10 @@
            top: 267px;
             right: 34px;
                           }
-        }
+        @media screen and (min-width: 1200px) {  
+            top: 438px;
+            right: 109px;}
+                       }
     &-products, &-made{
           padding: unset;
           border: unset;
@@ -97,6 +107,11 @@
     height: 26px;
     width: 26px;
                   }
+    &:focus, &:hover{
+    background: #ECEBEB;
+    transition-duration: 300ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }             
     }
     &-text{
         width: 115px;
@@ -129,6 +144,10 @@
         @media screen and (min-width: 768px) { 
             display: inline-block;
                   }
+        @media screen and (min-width: 1200px) { 
+            top: 160px;
+            right: 97px;
+                          }
     }
     &-ball{
         position: absolute;
@@ -138,6 +157,10 @@
         background-color: #fff;
         right: 2px;
         top: -4px;
+        @media screen and (min-width: 1200px) { 
+        width: 30px;
+        height: 30px;     
+                              }
     }
     &-numeric{
     font-family: Titan One;
@@ -148,6 +171,10 @@
     margin: unset;
     position: relative;
     z-index: 1;
+    @media screen and (min-width: 1200px) { 
+    font-size: 46px;
+    line-height: 1.13;     
+                      }
     }
     &-element{
     font-family: DM Sans;
@@ -156,18 +183,33 @@
     line-height: 1.25;
     color: white;
     margin: unset;
+    @media screen and (min-width: 1200px) { 
+        font-size: 14px;
+        line-height: 1.28;     
+                          }
     }
     &-products{
     margin-right: 8px;
     background: #D41443;
     color: white;
+    &:focus, &:hover{
+        background: #FFA5BA;
+        color: #D41443;
+        transition-duration: 300ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+         }
     @media screen and (min-width: 1200px) { 
     margin-right: 15px;     
                   }
     }
     &-made{
      background-color: #fff;
-     color: #D41443;   
+     color: #D41443;  
+     &:focus, &:hover{
+        background: #ECEBEB;
+        transition-duration: 300ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+         } 
     }
     &-name{
     position: relative;
