--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section id="hero" class="hero">
     <div class="hero-container">
         
  <h1 class="hero-name">ICE CREAM <br> MADE WITH <span class="hero-name-span">PASSION</span>
