Добавляет волну в герое

--- a/src/sass/layout/_page-hero.scss
+++ b/src/sass/layout/_page-hero.scss
@@ -1,13 +1,17 @@
 .page-hero{
     height: 618px;
+    padding-top: 109px;
+    padding-bottom: 47px;
+    width: 320px;
+
+/*    background-image: url('../images/hero/hero-wave-mobile.png');
+    background-position: center;
+    background-repeat: no-repeat;
+*/
 }
 
-.page-hero .container{
+.hero-wrapper{
     position: absolute;
-    top: 120px; 
-    padding-top: 50px;
-    padding-bottom: 47px;
-    background-image: url('../images/hero/hero-wave-mobile.png');
 }
 
 .hero-title{
@@ -41,6 +45,11 @@
 
 }
 
+.hero-text-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
 .hero-btn{
     min-width: 260px;
     min-height: 48px;
@@ -67,7 +76,7 @@
 .hero-bg{
     margin: 0 auto;
     width: 208px;
-    height: 177.5px;
+    height: 178px;
     background-size: cover;
 
     background-image: url('../images/hero/hero-bg-desktop.png');
@@ -76,13 +85,8 @@
 @media screen and (min-width: 768px){
     .page-hero{
         height: 557px;
-    }
-
-    .page-hero .container{
-        position: absolute;
-        padding-top: 70px;
+        padding-top: 158px;
         padding-bottom: 114px;
-
         background-image: url('../images/hero/hero-wave-tablet.png');
     }
 
@@ -114,17 +118,11 @@
 
 @media screen and (min-width: 1344px){
     .page-hero{
-        padding-top: 125px;
-    }
-
-    .page-hero .container{
-        position: absolute;
-        padding-top: 70px;
+        padding-top: 228px;
         padding-bottom: 114px;
-
+        height: 878px;
         background-image: url('../images/hero/hero-wave-desktop.png');
     }
-
 
     .hero-title{
         font-size: 58px;
