changes colors from variables

--- a/src/sass/_production.scss
+++ b/src/sass/_production.scss
@@ -10,10 +10,7 @@ $secondary-bg-color: #ECEBEB;
     color: $color;
     border-style: none;
     height: $height;
-
-
-
-    
+   
 }
 
 .button {
@@ -34,8 +31,8 @@ $secondary-bg-color: #ECEBEB;
 
 .production {
     padding-top: 125px;
-    padding-bottom: 100px;
-    background-color: #FFF5F6;
+    padding-bottom: 145px;
+    background-color: $color-footer;
     ;
 }
 
@@ -51,7 +48,7 @@ $secondary-bg-color: #ECEBEB;
     & .regular {
         display: block;
         font-size: 18px;
-        color:#FFA5BA;
+        color: $color-ellipse;
         margin-bottom: 15px;
 
     }
@@ -59,7 +56,7 @@ $secondary-bg-color: #ECEBEB;
     & .accent {
         display: block;
         font-size: 34px;
-        color: #D41443;
+        color: $color-accent;
         letter-spacing: 0.04em;
         margin-bottom: 25px;
         
@@ -91,11 +88,11 @@ padding-right: 30px;
 font-family: DM Sans;
 font-size: 12px;
 line-height: 1.16;
-color: #907E82;
+color: $color-text-grey;
 margin-bottom: 15px;
 
 &.black {
-    color: #000000;
+    color: $color-text-black;
     margin-bottom: 30px;
         }
 }
@@ -107,7 +104,7 @@ margin-bottom: 15px;
     margin-left: 30px;
     margin-bottom: 40px;
 
-    @include button (#FFFFFF, #D41443, 44px);
+    @include button ($color-text-white, $color-accent, 44px);
     text-decoration: none;
     
 
@@ -160,43 +157,13 @@ margin-bottom: 15px;
 
 }
 
-.features-list-icon {
-    
+.features-list-icon  {
 
-    &1 {
-        margin-bottom: 16px;
-        height: 50px;
-        width: 33px;
-        background-size: cover;
-        // background-image: url(../images/icon1.svg);
-        
-        // background-color: rgb(194, 72, 72);
-        background-image: url(../images/symbol-defs.svg#icon-milk);
-        fill: blue;
-        
-        
-        
+    &1, &2, &3 svg {
+        fill: $color-ellipse;
     }
 
-    &2 {
-        margin-bottom: 16px;
-        height: 50px;
-        width: 50px;
-        background-size: cover;
-        background-image: url(../images/symbol-defs.svg#icon-apples);
-    }
-
-    &3 {
-        margin-bottom: 16px;
-        height: 50px;
-        width: 44px;
-        background-size: cover;
-        background-image: url(../images/symbol-defs.svg#icon-heart-shaped-ice-cream);
-    }
-
-    
-    
-}
+   }
 
 
 
@@ -211,7 +178,7 @@ line-height: 1.14;
 letter-spacing: 0.04em;
 text-transform: uppercase;
 
-color: #D41443;
+color: $color-accent;
 
     
 }
@@ -222,9 +189,7 @@ color: #D41443;
     font-weight: bold;
     font-size: 12px;
     line-height: 1.7;  
-    color: #000000;
+    color: $color-text-black;
 
     
 }
-
-
