--- a/src/partials/production.html
+++ b/src/partials/production.html
@@ -38,7 +38,9 @@
                  <li >
                      <ul class="production-features-list">
                          <li class="features-list-icon1">
- 
+                            <svg width="33px" height="50px">
+                                <use href="../src/images/symbol-defs.svg#icon-milk"></use>
+                            </svg>
                          </li>
                          <li class="features-list-item">
                              721
@@ -51,7 +53,9 @@
                  <li >
                      <ul class="production-features-list">
                          <li class="features-list-icon2">
- 
+                            <svg width="50px" height="50px">
+                                <use href="../src/images/symbol-defs.svg#icon-apples"></use>
+                            </svg>
                          </li>
                          <li class="features-list-item">
                              16KG
@@ -64,7 +68,9 @@
                  <li >
                      <ul class="production-features-list">
                          <li class="features-list-icon3">
- 
+                            <svg width="44px" height="50px">
+                                <use href="../src/images/symbol-defs.svg#icon-heart-shaped-ice-cream"></use>
+                            </svg>
                          </li>
                          <li class="features-list-item">
                              84
