--- a/src/sass/layout/_main_problems.scss
+++ b/src/sass/layout/_main_problems.scss
@@ -2,7 +2,7 @@
   .main_problems {
     width: 100%;
     height: 693px;
-    background-color: #111518;
+    background-color: var(--black-color);
   }
   .main_problems__black {
     height: 560px;
@@ -26,17 +26,22 @@
     letter-spacing: 0.03em;
     // max-width: 280px;
     span {
-      color: #ff6b09;
+      color: var(--orange-color);
     }
   }
 
   .main_problems__list {
     display: block;
     position: absolute;
+    top: 1563px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 320px;
     margin-top: 20px;
     width: 280px;
     height: 660px;
-    background-color: #fff;
+    list-style: none;
+    background-color: var(--white-color);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
     ul {
       list-style: none;
