--- a/src/sass/_guarenty.scss
+++ b/src/sass/_guarenty.scss
@@ -1,8 +1,16 @@
+.warranty-corect .container {
+  background-color: var(--b-middle);
+}
 .warranty {
   display: flex;
   justify-content: space-between;
-  background-color: var(--b-middle);
+  width: 320px;
   padding: 30px 20px;
+  margin-left: auto;
+  margin-right: auto;
+  & .container {
+    background-color: var(--b-middle);
+  }
   &-title {
     @include font(800, 26px, 1.307, 0.03em);
     text-align: center;
@@ -62,8 +70,7 @@
 }
 @media screen and (min-width: 768px) {
   .warranty {
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
     padding: 30px 50px 30px 79px;
     &-list {
       width: 688px;
