--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -187,10 +187,11 @@
   content: '';
   position: absolute;
   width: 12px;
-  height: 1px;
+  height: 2px;
   bottom: 50%;
-  transform: translate(25%);
-  border: 1px solid var(--txt-orange);
+  left: 7px;
+  transform: translate(-50%);
+  background-color: var(--b-accent-background);
 }
 
 .teacher-link {
