--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -21,22 +21,22 @@
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
-              <h3 class="teacher-subtitle">Опыт подготовки учеников к ВНО - 6 лет</h3>
+              <p class="teacher-subtitle">Опыт подготовки учеников к ВНО - 6 лет</p>
             </li>
 
             <li class="teacher-list-check">
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
-              <h3 class="teacher-subtitle">Собственный результат сдачи ВНО - 197 баллов 2 года подряд</h3>
+              <p class="teacher-subtitle">Собственный результат сдачи ВНО - 197 баллов 2 года подряд</p>
             </li>
 
             <li class="teacher-list-check">
               <svg class="icon-check" width="17.08" height="14">
                 <use href="./images/sprite.svg#icon-check-mark"></use>
               </svg>
-              <h3 class="teacher-subtitle">Сдала на отлично международный аналог ВНО -
-                Кембриджский PET (Preliminary English Test)</h3>
+              <p class="teacher-subtitle">Сдала на отлично международный аналог ВНО -
+                Кембриджский PET (Preliminary English Test)</p>
             </li>
           </ul>
         </div>
@@ -44,8 +44,8 @@
         <p class="teacher-undertitle"></p>
         <ul>
           <li class="teacher-text">Высшее образование получила в Институте международных
-            отношений НАУ по специальности переводчик-аналитик.</li> 
-          <li class="teacher-text">В свободное время проходит курсы от лучших университетов мира по эффективному 
+            отношений НАУ по специальности переводчик-аналитик.</li>
+          <li class="teacher-text">В свободное время проходит курсы от лучших университетов мира по эффективному
             преподаванию и методикам написания сочинений.</li>
           <li class="teacher-text">В числе пройденных:
             English Grammar and Essay Writing (Berkeley),
