--- a/src/sass/components/_how-made.scss
+++ b/src/sass/components/_how-made.scss
@@ -137,6 +137,7 @@
 	display: flex;
 	align-items: center;
 	text-align: center;
+	box-sizing: border-box;
 	width: 176px;
 	height: 44px;
 	padding-left: 37px;
